# pipeline-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  cookiecutter.json  requirements-dev.txt
.github/workflows/: actions.yml
hooks/: post_gen_project.py  post_gen_project.sh
src/pipeline/: constants.py
{{ cookiecutter.project_name }}/: .gitignore  .pre-commit-config.yaml  Dockerfile  build-all-images.sh  convert_jupyter.sh  pyproject.toml  requirements-dev.txt  requirements.txt
{{ cookiecutter.project_name }}/.cloudbuild/: build_ci.yaml  deploy.yaml  run_precommit.yaml  run_pytest.yaml
{{ cookiecutter.project_name }}/.github/workflows/: actions.yml
{{ cookiecutter.project_name }}/python-project/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
{{ cookiecutter.project_name }}/src/components/ingestor/: build-img.sh  pyproject.toml  requirements.txt
{{ cookiecutter.project_name }}/src/components/ingestor/src/: __init__.py  ingestor.py  schemas.py
{{ cookiecutter.project_name }}/src/components/ingestor/src/ingestor/: DataSource.py  __init__.py  constants.py  ingestor.py  pandera_sampler.py  schemas.py
{{ cookiecutter.project_name }}/src/components/ingestor/test/: test_ingestor.py
{{ cookiecutter.project_name }}/src/components/ingestor/tests/: test_ingestor.py
{{ cookiecutter.project_name }}/src/pipeline/: Dockerfile  build-img.sh  constants.py  env_config.yaml  pipeline.py  requirements.txt
{{ cookiecutter.project_name }}/terraform/: .terraform.lock.hcl  backend.tf  buckets.tf  gcs_bucket.tf  terraform.tfvars  variables.tf
(+56 files in other folders)
